# VortexNav

./: .gitignore  CLAUDE.md  ESRI_COMPLIANCE_ANALYSIS.md  VORTEXNAV_RESEARCH_AND_PLAN.md
.claude/: settings.local.json
docs/: CM93_FORMAT_REFERENCE.md  VortexNav-Technical-Overview.md
vortexnav-app/: package-lock.json  package.json
vortexnav-app/src/: App.css  App.tsx
vortexnav-app/src-tauri/: Cargo.toml  tauri.conf.json
vortexnav-app/src-tauri/capabilities/: default.json
vortexnav-app/src-tauri/icons/: icon.icns
vortexnav-app/src-tauri/src/: catalog_parser.rs  chart_converter.rs  commands.rs  database.rs  download_manager.rs  gps.rs  gpx.rs  lib.rs  licensing.rs  main.rs  nmea.rs
vortexnav-app/src-tauri/src/cm93/: README.md  cell.rs  decode.rs  dictionary.rs  geometry.rs  mod.rs  reader.rs  renderer.rs  server.rs
vortexnav-app/src/components/: CatalogBrowser.tsx  CatalogManager.tsx  ChartBar.tsx  ChartEditModal.tsx  ChartImportDialog.tsx  ChartLayerItem.tsx  DeviceRegistration.tsx  DeviceStatusIndicator.tsx  DownloadAreaOverlay.tsx  DownloadedPackBar.tsx  GpsSettings.tsx  GpsStatusModal.tsx  ImportProgressIndicator.tsx  LayerSwitcher.tsx  MapView.tsx  NavigationModal.tsx  PackManager.tsx  RouteCreationOverlay.tsx  RouteNavigationModal.tsx  RoutePanel.tsx  ShareRouteModal.tsx  ShareTrackModal.tsx  StatusBar.tsx  TrackPanel.tsx  WaypointPanel.tsx  index.ts
vortexnav-app/src/hooks/: useCatalogCharts.ts  useCatalogs.ts  useChartLayers.ts  useDownloadArea.ts  useEntitlements.ts  useLicensingAgent.ts  useRouteManager.ts  useTauri.ts  useTrackManager.ts  useWaypointManager.ts
vortexnav-app/src/services/: laClient.ts
vortexnav-app/src/types/: index.ts
(+3 files in other folders)
