[package]
name = "vortexnav-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vortexnav_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# SQLite for configuration and MBTiles
rusqlite = { version = "0.31", features = ["bundled"] }

# NMEA parsing for GPS data
nmea = "0.6"

# Async runtime for serial port handling
tokio = { version = "1", features = ["rt", "sync", "macros"] }

# Serial port for NMEA input
tokio-serial = "5.4"
serialport = "4.7"

# Error handling
thiserror = "1"

# Logging
log = "0.4"
env_logger = "0.11"

# UUID for chart IDs
uuid = { version = "1", features = ["v4"] }

# XML parsing for chart catalogs
quick-xml = { version = "0.31", features = ["serialize"] }

# HTTP client for downloading charts and fetching catalogs
reqwest = { version = "0.11", features = ["json", "stream"] }

# ZIP extraction for downloaded chart archives
zip = "0.6"

# Async utilities
futures = "0.3"

# CPU core detection for parallel processing
num_cpus = "1.16"

